--- a/frontend/src/main/resources/puf/frisbee/frontend/view/GameView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/GameView.fxml
@@ -35,7 +35,6 @@ angepasst werden, um Fehlermeldungen in Eclipse zu vermeiden. -->
                   <Image url="@../images/frisbee01.png" />
                </image>
             </ImageView>
-            <Label fx:id="labelFrisbee" layoutX="500.0" layoutY="200" />
          </children>
       </Group>
 
@@ -107,8 +106,8 @@ angepasst werden, um Fehlermeldungen in Eclipse zu vermeiden. -->
                   </Label>
                   <HBox alignment="CENTER" prefHeight="80.0" spacing="40.0">
                      <children>
-                        <Button fx:id="buttonGameOverContinue" mnemonicParsing="false" onAction="#handleButtonGameOverContinueClicked" stylesheets="@../css/main.css" text="Yes, I'm totally hooked!" />
-                        <Button fx:id="buttonGameOverQuit" layoutX="609.0" layoutY="47.0" mnemonicParsing="false" onAction="#handleButtonGameOverQuitClicked" stylesheets="@../css/main.css" text="No, I'll come back later!" />
+                        <Button mnemonicParsing="false" onAction="#handleButtonGameOverContinueClicked" stylesheets="@../css/main.css" text="Yes, I'm totally hooked!" />
+                        <Button layoutX="609.0" layoutY="47.0" mnemonicParsing="false" onAction="#handleButtonGameOverQuitClicked" stylesheets="@../css/main.css" text="No, I'll come back later!" />
                      </children>
                   </HBox>
                </children>
