--- a/frontend/src/main/resources/puf/frisbee/frontend/view/ProfileView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/ProfileView.fxml
@@ -46,23 +46,17 @@
                   <HBox alignment="CENTER" spacing="40.0">
                      <children>
                         <Button mnemonicParsing="false" onAction="#handleButtonCancelClicked" styleClass="button-light" text="CANCEL" />
-                        <Button layoutX="605.0" layoutY="10.0" mnemonicParsing="false" onAction="#handleButtonSaveClicked" styleClass="button-light" text="SAVE" />
+                        <Button mnemonicParsing="false" onAction="#handleButtonSaveClicked" styleClass="button-light" text="SAVE" />
                      </children>
                   </HBox>
                </children>
                <padding>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="104.0" />
                </padding>
                <stylesheets>
                   <URL value="@../css/main.css" />
                   <URL value="@../css/form.css" />
                </stylesheets>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <StackPane.margin>
-                  <Insets top="80.0" />
-               </StackPane.margin>
             </VBox>
          </children>
          <padding>
