--- a/frontend/src/main/resources/puf/frisbee/frontend/view/RegistrationLoginView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/RegistrationLoginView.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.RegistrationLoginView">
@@ -59,6 +60,7 @@
                         <URL value="@../css/form.css" />
                      </stylesheets>
                   </VBox>
+                  <Line endY="420.0" stroke="WHITE" translateY="-65.0" />
                   <VBox alignment="TOP_CENTER">
                      <children>
                         <Label stylesheets="@../css/form.css" text="New to the game?">
