--- a/frontend/src/main/resources/puf/frisbee/frontend/view/TeamView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/TeamView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
@@ -7,61 +8,101 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Rectangle?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.TeamView">
     <children>
-      <HBox layoutX="10.0" layoutY="188.0" prefHeight="100.0" prefWidth="1280.0">
+      <StackPane fx:id="gameSuccessDialog" layoutX="10.0" layoutY="10.0">
          <children>
-            <Pane prefHeight="200.0" prefWidth="640.0">
+            <Rectangle blendMode="MULTIPLY" height="600.0" opacity="0.6" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
+            <HBox alignment="CENTER" spacing="80.0">
                <children>
-                  <VBox alignment="TOP_CENTER" layoutX="70.0" layoutY="-70.0" prefWidth="500.0" styleClass="bg-dark">
+                  <VBox alignment="TOP_CENTER" prefWidth="500.0">
                      <children>
-                        <Label styleClass="font-small" text="Join an existing team?" />
-                        <Label styleClass="font-heading" text="JOIN A TEAM" />
-                        <Label styleClass="font-label" text="Team  name" />
-                        <TextField fx:id="joinTeamName" maxWidth="-Infinity" prefWidth="200.0" />
-                        <Label fx:id="joinTeamError" styleClass="error" text="Label" />
-                        <Button mnemonicParsing="false" onAction="#handleJoinTeamButtonClicked" styleClass="button-light" text="Join" />
+                        <Label stylesheets="@../css/form.css" text="Join an existing team?">
+                           <styleClass>
+                              <String fx:value="form-label" />
+                              <String fx:value="form-label-top" />
+                           </styleClass></Label>
+                        <Label stylesheets="@../css/form.css" text="JOIN A TEAM">
+                           <styleClass>
+                              <String fx:value="form-label" />
+                              <String fx:value="form-heading" />
+                           </styleClass></Label>
+                        <Label styleClass="form-label" text="TEAM NAME" />
+                        <TextField fx:id="joinTeamName" maxWidth="-Infinity" prefWidth="200.0" styleClass="form-inputfield" stylesheets="@../css/form.css" />
+                        <Label fx:id="joinTeamError" stylesheets="@../css/form.css" text="Label">
+                           <styleClass>
+                              <String fx:value="form-label" />
+                              <String fx:value="form-label-error" />
+                           </styleClass></Label>
+                        <Button mnemonicParsing="false" onAction="#handleJoinTeamButtonClicked" styleClass="button-light" text="JOIN" />
+                        <Line endY="420.0" stroke="WHITE" />
+                     </children>
+                     <padding>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                     </padding>
+                     <stylesheets>
+                        <URL value="@../css/main.css" />
+                        <URL value="@../css/form.css" />
+                     </stylesheets>
+                  </VBox>
+                  <VBox alignment="TOP_CENTER" prefWidth="500.0" styleClass="bg-dark">
+                     <children>
+                        <Label stylesheets="@../css/form.css" text="Create a new team?">
+                           <styleClass>
+                              <String fx:value="form-label" />
+                              <String fx:value="form-label-top" />
+                           </styleClass></Label>
+                        <Label stylesheets="@../css/form.css" text="CREATE TEAM">
+                           <styleClass>
+                              <String fx:value="form-label" />
+                              <String fx:value="form-heading" />
+                           </styleClass></Label>
+                        <Label styleClass="form-label" stylesheets="@../css/form.css" text="TEAM NAME" />
+                        <TextField fx:id="createTeamName" maxWidth="-Infinity" prefWidth="200.0" styleClass="form-inputfield" stylesheets="@../css/form.css" />
+                        <Label fx:id="createTeamError" stylesheets="@../css/form.css" text="Label">
+                           <styleClass>
+                              <String fx:value="form-label" />
+                              <String fx:value="form-label-error" />
+                           </styleClass></Label>
+                        <Button mnemonicParsing="false" onAction="#handleCreateTeamButtonClicked" styleClass="button-light" text="CREATE" />
                      </children>
                      <padding>
                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                      </padding>
                   </VBox>
                </children>
-            </Pane>
-            <Pane prefHeight="200.0" prefWidth="640.0">
+               <padding>
+                  <Insets top="40.0" />
+               </padding>
+            </HBox>
+            <VBox alignment="CENTER" maxWidth="500.0" prefHeight="586.0" prefWidth="216.0" styleClass="bg-dark">
                <children>
-                  <VBox alignment="TOP_CENTER" layoutX="54.0" layoutY="-70.0" prefWidth="500.0" styleClass="bg-dark">
-                     <children>
-                        <Label styleClass="font-small" text="Create a new team?" />
-                        <Label styleClass="font-heading" text="CREATE TEAM" />
-                        <Label styleClass="font-label" text="Team Name" />
-                        <TextField fx:id="createTeamName" maxWidth="-Infinity" prefWidth="200.0" />
-                        <Label fx:id="createTeamError" styleClass="error" text="Label" />
-                        <Button mnemonicParsing="false" onAction="#handleCreateTeamButtonClicked" styleClass="button-light" text="Create" />
-                     </children>
-                     <padding>
-                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                     </padding>
-                  </VBox>
+                  <Label fx:id="currentTeam" stylesheets="@../css/form.css" text="Current Team: ">
+                     <styleClass>
+                        <String fx:value="form-label" />
+                        <String fx:value="form-heading" />
+                     </styleClass>
+                  </Label>
+                  <Label fx:id="player1" styleClass="form-label" text="Player 1:" />
+                  <Label fx:id="player2" styleClass="form-label" text="Player 2:" />
                </children>
-            </Pane>
-         </children>
-      </HBox>
-      <Pane prefHeight="200.0" prefWidth="640.0" AnchorPane.topAnchor="0.0" />
-      <VBox alignment="CENTER" layoutX="400.0" layoutY="430.0" maxWidth="500.0" prefWidth="500.0" styleClass="bg-dark">
-         <children>
-            <Label fx:id="currentTeam" styleClass="font-heading" text="Current Team: " />
-            <Label fx:id="player1" styleClass="font-label" text="Player 1:" />
-            <Label fx:id="player2" styleClass="font-label" text="Player 2:" />
+               <padding>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </padding>
+            </VBox>
          </children>
          <padding>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            <Insets bottom="40.0" top="80.0" />
          </padding>
-      </VBox>
-      <Button layoutX="600.0" layoutY="590.0" mnemonicParsing="false" onAction="#handleBackToStartButtonClicked" styleClass="button-dark" text="Back to Start" />
+      </StackPane>
+      <Button layoutX="600.0" layoutY="590.0" mnemonicParsing="false" onAction="#handleBackToStartButtonClicked" styleClass="button-dark" text="BACK" />
+      <fx:include fx:id="topPanel" source="TopPanel.fxml" />
+      <fx:include fx:id="bottomPanel" source="BottomPanel.fxml" />
     </children>
     <stylesheets>
         <URL value="@../css/main.css" />
