--- a/frontend/src/main/resources/puf/frisbee/frontend/view/TeamView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/TeamView.fxml
@@ -14,13 +14,13 @@
 <?import javafx.scene.shape.Rectangle?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.TeamView">
-    <children>
-      <StackPane fx:id="gameSuccessDialog" layoutX="10.0" layoutY="10.0">
+   <children>
+      <StackPane fx:id="gameSuccessDialog">
          <children>
             <Rectangle blendMode="MULTIPLY" height="600.0" opacity="0.6" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
             <HBox alignment="CENTER" spacing="80.0">
                <children>
-                  <VBox alignment="TOP_CENTER" prefWidth="500.0">
+                  <VBox alignment="TOP_CENTER">
                      <children>
                         <Label stylesheets="@../css/form.css" text="Join an existing team?">
                            <styleClass>
@@ -40,7 +40,6 @@
                               <String fx:value="form-label-error" />
                            </styleClass></Label>
                         <Button mnemonicParsing="false" onAction="#handleJoinTeamButtonClicked" styleClass="button-light" text="JOIN" />
-                        <Line endY="420.0" stroke="WHITE" />
                      </children>
                      <padding>
                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -50,7 +49,8 @@
                         <URL value="@../css/form.css" />
                      </stylesheets>
                   </VBox>
-                  <VBox alignment="TOP_CENTER" prefWidth="500.0" styleClass="bg-dark">
+                  <Line endY="280.0" stroke="WHITE" translateY="-135.0" />
+                  <VBox alignment="TOP_CENTER" styleClass="bg-dark">
                      <children>
                         <Label stylesheets="@../css/form.css" text="Create a new team?">
                            <styleClass>
@@ -80,33 +80,45 @@
                   <Insets top="40.0" />
                </padding>
             </HBox>
-            <VBox alignment="CENTER" maxWidth="500.0" prefHeight="586.0" prefWidth="216.0" styleClass="bg-dark">
+         </children>
+         <padding>
+            <Insets bottom="40.0" top="80.0" />
+         </padding>
+      </StackPane>
+      <HBox alignment="TOP_CENTER" layoutX="540.0" layoutY="420.0" prefWidth="200.0">
+         <children>
+            <VBox alignment="CENTER" minWidth="500.0" styleClass="bg-dark" translateX="-150.0">
                <children>
-                  <Label fx:id="currentTeam" stylesheets="@../css/form.css" text="Current Team: ">
+                  <Label fx:id="currentTeam" stylesheets="@../css/form.css" text="CURRENT TEAM">
                      <styleClass>
                         <String fx:value="form-label" />
                         <String fx:value="form-heading" />
                      </styleClass>
                   </Label>
-                  <Label fx:id="player1" styleClass="form-label" text="Player 1:" />
-                  <Label fx:id="player2" styleClass="form-label" text="Player 2:" />
+                  <Label fx:id="player1" styleClass="form-label" text="PLAYER 1:" />
+                  <Label fx:id="player2" styleClass="form-label" text="PLAYER 2:">
+                     <VBox.margin>
+                        <Insets top="6.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Button mnemonicParsing="false" onAction="#handleBackToStartButtonClicked" styleClass="button-dark" text="BACK TO START" translateY="30.0">
+                     <VBox.margin>
+                        <Insets top="24.0" />
+                     </VBox.margin>
+                  </Button>
                </children>
                <padding>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </padding>
             </VBox>
          </children>
-         <padding>
-            <Insets bottom="40.0" top="80.0" />
-         </padding>
-      </StackPane>
-      <Button layoutX="600.0" layoutY="590.0" mnemonicParsing="false" onAction="#handleBackToStartButtonClicked" styleClass="button-dark" text="BACK" />
+      </HBox>
       <fx:include fx:id="topPanel" source="TopPanel.fxml" />
-      <fx:include fx:id="bottomPanel" source="BottomPanel.fxml" />
-    </children>
-    <stylesheets>
-        <URL value="@../css/main.css" />
-        <URL value="@../css/form.css" />
-    </stylesheets>
+      <fx:include fx:id="bottomPanel" layoutY="680.0" source="BottomPanel.fxml" />
+   </children>
+   <stylesheets>
+      <URL value="@../css/main.css" />
+      <URL value="@../css/form.css" />
+   </stylesheets>
 
 </AnchorPane>
